# stock-market-prediction

./: .gitignore  README.md  codebook.toml  flake.nix  pyproject.toml  treefmt.nix
datasets/yahoo_finance/: LICENSE.md  yahoo_finance_2018_to_2023.csv
notebooks/: lstm.py  numerical.py
