[project]
name = "stock-market-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jax[cuda12]>=0.6.2",
  "marimo[recommended]>=0.14.7",
  "matplotlib>=3.10.3",
  "optax>=0.2.5",
  "polars[pyarrow]>=1.31.0",
  "seaborn>=0.13.2",
]
